5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1680_2167.log
== TEST (2019-05-02 22:09:48) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")


#Calculo do valor da passagem:
if(cd == Belem) and (pc == ida):
	print(cd[0].upper+cd[1:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:11:35) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")


#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:18:06) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:18:23) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:19:04) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:20:32) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(cd == Belem) and (pc == ida):
NameError: name 'Belem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:21:25) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)
else:
	print("Destino inexistente")
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:21:35) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)
else:
	print("Destino inexistente")
	
-- EXECUTION TIME:
0.157155
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
Humaita
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
Maues
190.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:25:29) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)
else:
	print("Destino inexistente")
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:25:46) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)
else:
	print("Destino inexistente")
	
-- EXECUTION TIME:
0.1658
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
Humaita
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
Maues
190.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:25:55) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")

#Calculo do valor da passagem:
if(cd == "Belem") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(350.0)
elif(cd == "Belem") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(650.0)
elif(cd == "Borba") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(80.0)
elif(cd == "Borba") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(152.0)	
elif(cd == "Coari") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(106.0)
elif(cd == "Coari") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(199.0)	
elif(cd == "Humaita") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(200.0)
elif(cd == "Humaita") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(390.0)
elif(cd == "Manicore") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(150.0)
elif(cd == "Manicore") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(280.0)
elif(cd == "Maues") and (pc == "ida"):
	print(cd[0].upper()+cd[1:])
	print(100.0)
elif(cd == "Maues") and (pc == "ida-e-volta"):
	print(cd[0].upper()+cd[1:])
	print(190.0)
else:
	print("Destino inexistente")
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:28:09) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "belem") and (pc == "ida"):
	print(350.0)
elif(cd == "belem") and (pc == "ida-e-volta"):
	print(650.0)
elif(cd == "borba") and (pc == "ida"):
	print(80.0)
elif(cd == "borba") and (pc == "ida-e-volta"):
	print(152.0)	
elif(cd == "coari") and (pc == "ida"):
	print(106.0)
elif(cd == "coari") and (pc == "ida-e-volta"):
	print(199.0)	
elif(cd == "humaita") and (pc == "ida"):
	print(200.0)
elif(cd == "humaita") and (pc == "ida-e-volta"):
	print(390.0)
elif(cd == "manicore") and (pc == "ida"):
	print(150.0)
elif(cd == "manicore") and (pc == "ida-e-volta"):
	print(280.0)
elif(cd == "maues") and (pc == "ida"):
	print(100.0)
elif(cd == "maues") and (pc == "ida-e-volta"):
	print(190.0)
else:
	print("Destino inexistente")
	
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:28:21) 
-- CODE:
# Definindo a cidade de destino:
cd = input("Digite a cidade de destino: ")
pc = input("Percurso somente ida ou ida-e-volta? ")
cd = cd.lower()
pc = pc.lower()

#Calculo do valor da passagem:
if(cd == "belem") and (pc == "ida"):
	print(350.0)
elif(cd == "belem") and (pc == "ida-e-volta"):
	print(650.0)
elif(cd == "borba") and (pc == "ida"):
	print(80.0)
elif(cd == "borba") and (pc == "ida-e-volta"):
	print(152.0)	
elif(cd == "coari") and (pc == "ida"):
	print(106.0)
elif(cd == "coari") and (pc == "ida-e-volta"):
	print(199.0)	
elif(cd == "humaita") and (pc == "ida"):
	print(200.0)
elif(cd == "humaita") and (pc == "ida-e-volta"):
	print(390.0)
elif(cd == "manicore") and (pc == "ida"):
	print(150.0)
elif(cd == "manicore") and (pc == "ida-e-volta"):
	print(280.0)
elif(cd == "maues") and (pc == "ida"):
	print(100.0)
elif(cd == "maues") and (pc == "ida-e-volta"):
	print(190.0)
else:
	print("Destino inexistente")
	
-- EXECUTION TIME:
0.147696
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
